test/typecheck/fail/default_order.sail
(* Could make an argument for why this should be ok, but allowing
default order to change could have unintended consequences if we arn't
careful, so it seems safer to just forbid it *)

default Order dec
default Order inc
